--- a/front/index.css
+++ b/front/index.css
@@ -1,3 +1,22 @@
-.title{
-	text-align: center;
-}
+h1 {
+  text-align: center;
+  color: red; }
+
+.todo-container {
+  padding: 20px 50px; }
+  .todo-container > input {
+    height: 30px;
+    width: 200px;
+    margin-left: 100px; }
+
+footer ul {
+  list-style: none;
+  display: inline-block; }
+  footer ul li {
+    display: inline-block;
+    margin-right: 10px; }
+    footer ul li a {
+      color: black;
+      text-decoration: none; }
+  footer ul .active {
+    color: green; }
