--- a/front/index.css
+++ b/front/index.css
@@ -19,4 +19,6 @@ footer ul {
       color: black;
       text-decoration: none; }
   footer ul .active {
-    color: green; }
+    color: green;
+    border: solid;
+    padding: 0 5px; }
