--- a/style/index.scss
+++ b/style/index.scss
@@ -1,21 +1,40 @@
-h1 {
-	text-align: center;
-	color:red;
-}
-
-.todo-container{
-	padding: 20px 50px;
-	&>input{
-		height: 30px;
-		width:200px;
-		margin-left: 100px;
+#todoapp{
+	.title{
+		text-align: center;
+	}
+	margin:50px auto;
+	width: 450px;
+	#addTodo{
+		width:400px;
+		height:30px;
+		box-shadow: 0px 0px 1px #fff inset;
+		margin-left: 20px;
+	}
+	.deleteButton{
+		float: right;
+		margin-right: 30px;
+	}
+	.items{
+		li{
+			line-height: 30px;
+		}
 	}
 }
 
+
 footer{
-	ul{
+	.clearButton{
+		padding:5px 7px;
+		border-radius: 3px;
+	}
+	.itemlength{
+		padding-left: 20px;
+		margin-right: 100px;
+	}
+	ul{	
 		list-style: none;
 		display: inline-block;
+		padding-left: 20px;
 		li{
 			display: inline-block;
 			margin-right: 10px;
@@ -31,3 +50,4 @@ footer{
 		}
 	}
 }
+
