--- a/style/index.scss
+++ b/style/index.scss
@@ -1,52 +1,203 @@
 #todoapp{
+	font-family:"PingFang SC";
+	background: #fff;
+	margin:130px 50px 40px;
+	position:relative;
+	box-shadow:0 2px 4px 0 rgba(0,0,0,0.2),0 25px 50px 0 rgba(0,0,0,0.1);
 	.title{
+		text-overflow: hidden;
+		white-space: pre;
+		position: absolute;
+		top:-155px;
+		width:100%;
+		font-size:60px;
+		font-weight: 100;
 		text-align: center;
+		color:rgba(175,47,47,0.15);
 	}
-	margin:50px auto;
-	width: 450px;
+	::-webkit-input-placeholder { /* WebKit browsers */
+	    color:#ddd;
+	    font-weight: 100;
+	}
+	:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+	    color:#ddd;
+	    font-weight: 100;
+	}
+	::-moz-placeholder { /* Mozilla Firefox 19+ */
+	    color:#ddd;
+	    font-weight: 100;
+	}
+	:-ms-input-placeholder { /* Internet Explorer 10+ */
+	    color:#ddd;
+	    font-weight: 100;
+	}
+	#addTodo,.edit{	
+		position: relative;
+		margin: 0;
+		width: 100%;
+		font-size: 24px;
+		font-family: inherit;
+		font-weight: inherit;
+		line-height: 1.4em;
+		border: 0;
+		outline: none;
+		color: inherit;
+		box-sizing: border-box;
+	}
 	#addTodo{
-		width:400px;
-		height:30px;
-		box-shadow: 0px 0px 1px #fff inset;
-		margin-left: 20px;
+		padding: 16px 16px 16px 60px;
+		border: none;
+		background: rgba(0, 0, 0, 0.003);
+		box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
 	}
-	.deleteButton{
-		float: right;
-		margin-right: 30px;
-	}
+
 	.items{
+		position: relative;
+		color:#4d4d4d;
+		list-style: none;
+		font-weight: 300;
+		margin-top: 0px;
 		li{
-			line-height: 30px;
+			.toggleItem{
+				height: 40px;
+				width: 40px;
+				background: none;
+				text-align: center;
+				position: absolute;
+				top:5px;
+				margin-left: -40px;
+				border: red;
+				outline: none;
+
+			}
+			span{
+				display: block;
+			}
+			button{
+				display: none;
+				position: absolute;
+				top: 0;
+				right: 10px;
+				bottom: 0;
+				width: 40px;
+				height: 40px;
+				margin: auto 0;
+				font-size: 30px;
+				color: #cc9a9a;
+				margin-bottom: 11px;
+				transition: color 0.2s ease-out;
+				background: none;
+				border: none;
+			}
+			button:after{
+				content: 'x';
+			}
+			button:hover{
+				color:#af5d5e;
+			}
+			&:hover button{
+				display: block;					
+			}
+
+			.edittext{
+				display: block;
+				height: 100%;
+
+				position: relative;
+				width: 100%;
+				font-size: 24px;
+				font-family: inherit;
+				font-weight: inherit;
+				line-height: 1.4em;
+				border: 0;
+				outline: none;
+				color: inherit;
+				padding: 6px;
+				border: 1px solid #999;
+				box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+				box-sizing: border-box;
+				-webkit-font-smoothing: antialiased;
+				-moz-font-smoothing: antialiased;
+				font-smoothing: antialiased;
+			}
+
+			height: 58px;
+			line-height: 58px;
+			padding-left:20px;
+			position: relative;
+			border-bottom: 1px solid #ededed;
 		}
 	}
+
+
 }
 
 
 footer{
+	font-family:"PingFang SC";
+	font-weight: 300;
+	color: #777;
+	padding: 10px 15px;
+	height: 20px;
+	text-align: center;
+	&:before{
+		content: '';
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		height: 50px;
+		overflow: hidden;
+		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
+		            0 8px 0 -3px #f6f6f6,
+		            0 9px 1px -3px rgba(0, 0, 0, 0.2),
+		            0 16px 0 -6px #f6f6f6,
+		            0 17px 2px -6px rgba(0, 0, 0, 0.2);
+
+	}
+
 	.clearButton{
-		padding:5px 7px;
-		border-radius: 3px;
+		font-weight: 300;
+		font-family:inherit;
+		font-size: 14px;
+		float: right;
+		position: relative;
+		line-height: 20px;
+		text-decoration: none;
+		cursor: pointer;
+		position: relative;
+		background: none;
+		border: none;
+		outline: none;
+		&:hover{
+			text-decoration:underline;
+		};
 	}
 	.itemlength{
-		padding-left: 20px;
-		margin-right: 100px;
+		font-family: inherit;
+		float: left;
+		text-align: left;
 	}
 	ul{	
+		margin: 0;
+		padding: 0;
 		list-style: none;
-		display: inline-block;
-		padding-left: 20px;
+		position: absolute;
+		right: 0;
+		left: 0;
 		li{
 			display: inline-block;
-			margin-right: 10px;
 			a{
-				color:black;
+				color: inherit;
+				margin: 3px;
+				padding: 3px 7px;
 				text-decoration: none;
+				border: 1px solid transparent;
+				border-radius: 3px;
 			}
 		}
 		.active{
-			color:green;
-			border: solid;
-			padding:0 5px;
+			border-color: rgba(175, 47, 47, 0.2);
 		}
 	}
 }
